--- a/Find-information-is-already-available.html
+++ b/Find-information-is-already-available.html
@@ -4,7 +4,7 @@
    <head>
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta charset="utf-8">
-      <title>Find information that is already available - Canada.ca</title>
+      <title>Find information that is available without an ATIP request - Canada.ca</title>
       <meta content="width=device-width,initial-scale=1" name="viewport"/>
       
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
@@ -130,9 +130,9 @@
   <div class="container">
     <ol class="breadcrumb">
       <li><a href="https://www.canada.ca/en.html">Canada.ca</a></li>
-      <li><a href="https://www.canada.ca/en/services/taxes.html">Canada Revenue Agency</a></li>
-      <li><a href="https://www.canada.ca/en/services/taxes/income-tax.html">Transparency</a></li>
-      <li><a href="https://www.canada.ca/en/services/taxes/income-tax/corporation-income-tax.html">Access to information and privacy</a></li>
+      <li><a href="https://www.canada.ca/en/revenue-agency.html">Canada Revenue Agency</a></li>
+      <li><a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/transparency-proactive-disclosure-canada-revenue-agency.html">Transparency</a></li>
+      <li><a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/request-information-canada-revenue-agency.html">Request information from the Canada Revenue Agency</a></li>
     </ol>
   </div>
 </nav>
@@ -146,75 +146,66 @@
 		<nav class="gc-subway provisional">
 			<h1>Access to information and privacy at the Canada Revenue Agency  </h1>
 			<ul>
-				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/what is Access to information and privacy at CRA.html">What is Access to information and Privacy at CRA </a></li>
-        			<li><a href="#" class="active">Find information that is already available </a></li>
-				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/requirements-need-to-make-a-request.html">What you will need to make a request</a></li>
-				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/how-to-submit-an-ATIP-request.html">How to submit an ATIP request</a></li>
+				<li><a href="#" class="active">What is Access to information and Privacy (ATIP) </a></li>
+        			<li><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information that is available without an ATIP requset </a></li>
+				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/requirements-need-to-make-a-request.html">Get ready to make a request</a></li>
+				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/how-to-submit-an-ATIP-request.html">How to send an ATIP request</a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/ways-to-receive.html">Ways to receive requested records</a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/contact-us.html">Contact us</a></li>
-			</ul>
+			</ul> 
 	    </nav>
 
 		<!-- Second H1 -->
-		<h1 property="name" id="wb-cont" class="gc-thickline">Find information that is already available</h1> 
-	<p>You can get many types of information from the Canada Revenue Agency (CRA) without the need for a formal information request, including: </p> 
-  <ul class="fa-ul">
-			<li><span class="fas fa-check text-success fa-li" aria-hidden="true"></span>Copies of individual’s tax slips </li>
-			<li><span class="fas fa-check text-success fa-li" aria-hidden="true"></span>Business information returns </li> 
-    <li><span class="fas fa-check text-success fa-li" aria-hidden="true"></span>The CRA’s policy manuals </li>
-		</ul> 
-   <section class="alert alert-info">
-  <h3>CRA does not have</h3>
- <ul> 
-  <li>Information about administering social insurance numbers (applications, replacements for lost or stolen cards, or forgotten numbers) or employment insurance. Go to <a href="https://www.canada.ca/en/employment-social-development/corporate/portfolio/service-canada.html">Service Canada.</a></li> 
-   <li>Information about your travel history outside Canada. Go to <a href="https://www.cbsa-asfc.gc.ca/agency-agence/reports-rapports/pia-efvp/atip-aiprp/thr-rav-eng.html">Canada Border Services Agency.</a></li>
- </ul>
-</section>
+		<h1 property="name" id="wb-cont" class="gc-thickline">Find information that is available without an ATIP request</h1> 
+	<p>You can get many types of information from the CRA without sending a formal information request.</p> 
+ <p>This is often the fastest way to get the information you need.</p>
 
 <h2 class="h3">On this page</h2>
         <ul>
-          <li><a href="#personal">Access personal information</a></li>
-          <li><a href="#business">Access business information  </a></li> 
-          <li><a href="#CRA">CRA’s information holdings </a></li>
+          <li><a href="#personal">Access personal or business information</a></li>
+          <li><a href="#CRA">CRA spending and administrative activities</a></li>
           <li><a href="#charities">Information about registered charities </a></li> 
-          <li><a href="#other">Other information available online</a></li>
         </ul>	
-<h2 id="personal">Access your personal information</h2>
-<p>You can go to your CRA My Account to find: </a></p> 
+<h2 id="personal">Access personal or business information</h2>
+<p>You can access many types of personal or business information through CRA My Account or My Business Account.</a></p>  
+<h3>For personal information</h3> 
+	<p>In My Account, you can find information such as:</p>
   <ul> 
-    <li>Personal income tax returns</li>  
+    <li>Personal tax returns, assessments, and statements</li>  
     <li>Information slips (for example, T4, T4A, or T5 slips, and RRSP receipts)</li> 
-    <li>Notices of assessment or reassessment</li>  
-    <li>Statements of income and deductions from the past 3 assessed years </li> 
-    <li>COVID-19 support statements including the Canada Emergency Response Benefit (CERB)</li>  
     <li>Personal information, such as your address, direct deposit information and representative authorizations</li>
   </ul>  
-	   <div class="mrgn-tp-md"><a class="btn btn-call-to-action" href="/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">Sign in to CRA My Account</a> <a href="/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html" class="mrgn-lft-md">Register</a></div>
-  <p>For a complete list of information you can get through My Account, go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-account.html">About My Account.</a>
-Or call the individual tax enquiries line at <strong>1-800-959-8281</strong> to request tax and benefit documents. 
+	   <div class="mrgn-tp-md"><a class="btn btn-call-to-action" href="/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">Sign in to CRA My Account</a> <a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/register-cra-sign-in-services.html?account=mya" class="mrgn-lft-md">Register</a></div>
+  <p>For a complete list of information you can get through My Account, go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-account.html">About My Account.</a></p>
+<p>You may also call the individual tax enquiries line at <strong>1-800-959-8281</strong> to request tax and benefit documents. 
 </p>  
 	
-<h2 id="business">Access your business information </h2>
-<p>Go to My Business Account for your:</p> 
+<h3>For business information </h3>
+<p>In My Business Account, you can find information such as:</p> 
   <ul> 
     <li>Tax returns</li>  
     <li>Corporate account balance</li> 
     <li>Account transactions</li>  
-    <li>notices of assessment or reassessment</li>
+    <li>Notices of assessment or reassessment</li>
   </ul>  
-<div class="mrgn-tp-md"><a class="btn btn-call-to-action" href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">Sign in to CRA My Business Account</a> <a href="/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html" class="mrgn-lft-md">Register</a></div>
-  <p>For a complete list of information you can get through My Business Account, go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account/what-on-business-account.html"></a>What can I do on my Business Account.
-Or call the business enquiries line at 1-800-959-5525 to request corporate income tax documents.  
+<div class="mrgn-tp-md"><a class="btn btn-call-to-action" href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">Sign in to CRA My Business Account</a> <a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/register-cra-sign-in-services.html?account=mba" class="mrgn-lft-md">Register</a></div>
+  <p>For a complete list of information you can get through My Business Account, go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account/what-on-business-account.html"></a>What can I do on my Business Account.</p>
+<p>You may also call the business enquiries line at <b>1-800-959-5525</b> to request corporate income tax documents.  
 </p> 
 
-<h2 id="CRA">CRA's information holdings</h2>
-<p>Many of the records held by the Canada Revenue Agency (CRA)  are readily accessible to the public, this includes:</p> 
-  <ul> 
-    <li>Policy manuals </li>  
-    <li>Financial records </li> 
-    <li>Account transactions</li>  
-    <li>Information about government operations </li>
-  </ul> 
+<h2 id="CRA">CRA spending and administrative activities</h2>
+<p>Many of the records held by the CRA are readily accessible to the public.</p>  
+<p>You can find information about <a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/completed-access-information-requests.html">previously completed access to information requests</a>and also how much CRA spends on certain activities.</p>
+<details>
+	<summary>Travel and hospitality</summary> 
+<ul>
+	<li><a href="https://search.open.canada.ca/travela/?_ga=2.21213624.289352888.1528729136-1381001506.1471292866&f%5B0%5D=travela_organization_en%3ACanada+Revenue+Agency&travela%5B0%5D=org_name_en%3ACanada+Revenue+Agency&owner_org=cra-arc&page=1&sort=score+desc">Annual expenditures for travel, hospitality and conferences</a></li>
+	<li><a href="https://search.open.canada.ca/travelq/?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Travel expenditures for senior CRA officials</a> </li>
+	<li><a href="https://open.canada.ca/en/search/hospitalityq?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">	Hospitality expenditures for senior CRA officials</a></li> 
+	<li><a href="https://search.open.canada.ca/grants/?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Travel expenditures for senior CRA officials </a></li>
+		</ul>
+			
+</ul> 
   <p>Visit the <a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/info-source-sources-federal-government-employee-information.html">Info Source and the Reading Room Services</a> to explore available information.
 </p> 
 <h2 id="charities">Access information about registered charities </h2>  
