--- a/Find-information-is-already-available.html
+++ b/Find-information-is-already-available.html
@@ -195,22 +195,47 @@
 
 <h2 id="CRA">CRA spending and administrative activities</h2>
 <p>Many of the records held by the CRA are readily accessible to the public.</p>  
-<p>You can find information about <a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/completed-access-information-requests.html">previously completed access to information requests</a>and also how much CRA spends on certain activities.</p>
-<details>
-	<summary>Travel and hospitality</summary> 
-<ul>
+<p>You can find information about <a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/completed-access-information-requests.html">previously completed access to information requests</a>and also how much CRA spends on certain activities.</p> 
+
+<ul class="list-unstyled">
+ <li>
+  <details>
+   <summary>Travel and hospitality</summary>  
+	  <ul>
 	<li><a href="https://search.open.canada.ca/travela/?_ga=2.21213624.289352888.1528729136-1381001506.1471292866&f%5B0%5D=travela_organization_en%3ACanada+Revenue+Agency&travela%5B0%5D=org_name_en%3ACanada+Revenue+Agency&owner_org=cra-arc&page=1&sort=score+desc">Annual expenditures for travel, hospitality and conferences</a></li>
 	<li><a href="https://search.open.canada.ca/travelq/?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Travel expenditures for senior CRA officials</a> </li>
 	<li><a href="https://open.canada.ca/en/search/hospitalityq?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">	Hospitality expenditures for senior CRA officials</a></li> 
 	<li><a href="https://search.open.canada.ca/grants/?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Travel expenditures for senior CRA officials </a></li>
 		</ul>
-			
-</ul> 
-  <p>Visit the <a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/info-source-sources-federal-government-employee-information.html">Info Source and the Reading Room Services</a> to explore available information.
+  </details>
+ </li>
+ <li>
+  <details>
+   <summary>Contracts, grants, and contributions</summary>
+   <ul>
+	<li><a href="https://search.open.canada.ca/contracts/?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Contracts over $10,000 issued by or on behalf of the CRA</a></li>
+	<li><a href="https://open.canada.ca/en/search/hospitalityq?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Grants and contributions over $25,000 awarded by the CRA</a> </li>
+		</ul>
+  </details>
+ </li>
+ <li>
+  <details>
+   <summary>Administrative activities</summary>
+   <ul>
+	<li><a href="https://open.canada.ca/en/search/reclassification?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Job reclassifications within the CRA</a></li>
+	<li><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/protecting-your-privacy/privacy-impact-assessment.html">Privacy impact assessment</a> </li> 
+	<li><a href="https://search.open.canada.ca/opendata/?sort=&q=canada+revenue+agency&organization=cra-arc">Open data</a> </li>
+		</ul>
+  </details>
+ </li>
+</ul>
+<details>
+	
+  <p>Visit the <a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/info-source-sources-federal-government-employee-information.html">Info Source – Federal Government and Employee Information</a> to explore more available information.
 </p> 
-<h2 id="charities">Access information about registered charities </h2>  
-<p>Accessing information about registered charities and other qualified donee does not require a formal request. Here are ways you can obtain this information quickly and at no cost: </p>
-  <ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
+<h2 id="charities">Find information about registered charities </h2>  
+<p>You do not need to send an ATIP request for information about registered charities and other qualified donees.</p>
+  <!--<ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
   <li class="cnjnctn-col"> 
     <h3>Online list of charities and other qualified donee:</h3>
     <p>The CRA maintains a <a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">list of charities and other qualified donees</a>. This searchable database allows you to view information about each organization, including their status and publicly available financial documents. </p>
@@ -219,23 +244,9 @@
     <h3>Informal requests for charity information: </h3>
     <p>If you need more information about a particular charity or other qualified donees, you can make an informal request. This is often faster and more direct than going through a formal request. For guidance on how to make an informal request, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/request-registered-charity-information.html">Request registered charity information</a>.</p>
   </li>
-</ul>
-  <p>Go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/information-about-a-charity.html">How to get information about a charity</a>for more information.
-</p> 
-<h2 id="other">Other information available online</h2>
-<p>In support of our committed to transparency, you can also find the following information online:</p> 
-  <ul> 
-    <li><a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/completed-access-information-requests.html">	Previously completed access to information requests</a></li>  
-    <li><a href="https://search.open.canada.ca/travela/?_ga=2.21213624.289352888.1528729136-1381001506.1471292866&f%5B0%5D=travela_organization_en%3ACanada+Revenue+Agency&travela%5B0%5D=org_name_en%3ACanada+Revenue+Agency&owner_org=cra-arc&page=1&sort=score+desc">Annual expenditures for travel, hospitality and conferences</a></li>   
-    <li><a href="https://search.open.canada.ca/travelq/?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Travel expenditures for senior CRA officials</a></li>  
-    <li><a href="https://open.canada.ca/en/search/hospitalityq?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Hospitality expenditures for senior CRA officials</a></li>   
-    <li><a href="https://search.open.canada.ca/contracts/?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Contracts over $10,000 issued by or on behalf of the CRA</a></li>   
-    <li><a href="https://search.open.canada.ca/grants/?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Travel expenditures for senior CRA officials</a></li>  
-    <li><a href="https://open.canada.ca/en/search/hospitalityq?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Grants and contributions over $25,000 awarded by the CRA</a></li>  
-    <li><a href="https://open.canada.ca/en/search/reclassification?f%5B0%5D=org_name_en%3ACanada%20Revenue%20Agency">Job reclassifications within the CRA</a></li>  
-    <li><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/protecting-your-privacy/privacy-impact-assessment.html">Privacy impact assessment</a></li>   
-    <li><a href="https://search.open.canada.ca/opendata/?sort=&q=canada+revenue+agency&organization=cra-arc">Open Data </a></li> 
-  </ul> 
+</ul> -->
+  <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/information-about-a-charity.html">How to get information about a charity</a>.
+
  <!-- Pagination -->
 		<nav class="gc-subway-pagination">
 			<h2 class="wb-inv">Document navigation</h2>
