--- a/Find-information-is-already-available.html
+++ b/Find-information-is-already-available.html
@@ -158,7 +158,7 @@
 		<!-- Second H1 -->
 		<h1 property="name" id="wb-cont" class="gc-thickline">Find information that is available without an ATIP request</h1> 
 	<p>You can get many types of information from the CRA without sending a formal information request.</p> 
- <p>This is often the fastest way to get the information you need.</p>
+ <p>This is often the <b>fastest way</b> to get the information you need.</p>
 
 <h2 class="h3">On this page</h2>
         <ul>
