--- a/Find-information-is-already-available.html
+++ b/Find-information-is-already-available.html
@@ -234,7 +234,7 @@
 </p> 
 <h2 id="charities">Find information about registered charities </h2>  
 <p>You do not need to send an ATIP request for information about registered charities and other qualified donees.</p>
-  <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/information-about-a-charity.html">How to get information about a charity</a>.
+<p>Go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/information-about-a-charity.html">How to get information about a charity</a> for more information </p>.
 
  <!-- Pagination -->
 		<nav class="gc-subway-pagination">
