--- a/requirements-need-to-make-a-request.html
+++ b/requirements-need-to-make-a-request.html
@@ -4,7 +4,7 @@
    <head>
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta charset="utf-8">
-      <title>What you will need to make a request- Canada.ca</title>
+      <title>Get ready to make a request- Canada.ca</title>
       <meta content="width=device-width,initial-scale=1" name="viewport"/>
       
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
@@ -130,9 +130,9 @@
   <div class="container">
     <ol class="breadcrumb">
       <li><a href="https://www.canada.ca/en.html">Canada.ca</a></li>
-      <li><a href="https://www.canada.ca/en/services/taxes.html">Canada Revenue Agency</a></li>
-      <li><a href="https://www.canada.ca/en/services/taxes/income-tax.html">Transparency</a></li>
-      <li><a href="https://www.canada.ca/en/services/taxes/income-tax/corporation-income-tax.html">Access to information and privacy</a></li>
+      <li><a href="https://www.canada.ca/en/revenue-agency.html">Canada Revenue Agency</a></li>
+      <li><a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/transparency-proactive-disclosure-canada-revenue-agency.html">Transparency</a></li>
+      <li><a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/request-information-canada-revenue-agency.html">Request information from the Canada Revenue Agency</a></li>
     </ol>
   </div>
 </nav>
@@ -145,31 +145,34 @@
 <!-- Navigation menu and first H1 -->
 		<nav class="gc-subway provisional">
 			<h1>Access to information and privacy at the Canada Revenue Agency  </h1>
-			<ul>
-				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/what is Access to information and privacy at CRA.html">What is Access to information and Privacy at CRA </a></li>
-        			<li><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information that is already available </a></li>
-				<li><a href="#" class="active">What you will need to make a request</a></li>
-				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/how-to-submit-an-ATIP-request.html">How to submit an ATIP request</a></li>
+		<ul>
+				<li><a href="#" class="active">What is Access to information and Privacy (ATIP) </a></li>
+        			<li><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information that is available without an ATIP requset </a></li>
+				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/requirements-need-to-make-a-request.html">Get ready to make a request</a></li>
+				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/how-to-submit-an-ATIP-request.html">How to send an ATIP request</a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/ways-to-receive.html">Ways to receive requested records</a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/contact-us.html">Contact us</a></li>
-			</ul>
+			</ul> 
 	    </nav>
 
 		<!-- Second H1 -->
-		<h1 property="name" id="wb-cont" class="gc-thickline">What you will need to make a request </h1> 
-	<p>If you can’t find the information you are looking for at <a href=" https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information that is already available</a> , make a formal request through the Access to Information Act or Privacy Act. Please note this process may take at least 30 days and there is a $5 fee for requests under the Access to Information Act, but there is no fee for requests for personal information under the Privacy Act.</p>  
+		<h1 property="name" id="wb-cont" class="gc-thickline">Get ready to make a request </h1> 
+	<p>If you can’t find <a href=" https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">the information you are looking for </a> , you can make a formal ATIP request. This process may take <b>at least 30 days</b>.</p>   
+<p>There is a $5 fee for requests under the Access to Information Act.</p> 
+<p>There is no fee for requests for personal information under the Privacy Act.</p>
   <section class="alert alert-info">
-  <h3>New process for representatives requesting income statements from the last 3 years, notices of assessment, and benefits information</h3>
+  <h3>New process for representatives</h3>
  <p>Effective <strong>September 10, 2024</strong>, the CRA is updating its process. The ATIP Directorate will no longer process your requests for your client’s income statements from the last 3 years, notices of assessment, and benefits information. Your client can get this information through <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">My Account</a>  or <a href="https://www.canada.ca/en/revenue-agency/services/e-services.html">other CRA services</a>. For more information about these changes, go to <a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/changes-access-information-privacy-requests-canada-revenue-agency.html">Changes to access to information and privacy requests at the Canada Revenue Agency</a>.</p>
-</section> 
+</section>  
+<p>For more information:<a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/changes-access-information-privacy-requests-canada-revenue-agency.html">Changes to access to information and privacy requests at the Canada Revenue Agency.</a> </p>
   <h2 class="h3">On this page</h2>
         <ul>
-          <li><a href="#eligibility">Eligibility</a></li>
-          <li><a href="#requirements">Requirements for submitting an ATIP request </a></li> 
+          <li><a href="#eligibility">Who can send a request</a></li>
+          <li><a href="#requirements">What information you need to provide</a></li> 
         </ul>	
 
 
-<h2 id="eligibility">Eligibility</h2>
+<h2 id="eligibility">Who can send a request</h2>
 <p>To make a request, you must be one of the following:</p> 
   <ul> 
     <li>a Canadian citizen</li>  
@@ -177,10 +180,11 @@
     <li>an individual or corporation currently in Canada</li>  
     <li>individuals outside of Canada (under the Privacy Act <strong>only</strong>) </li>
   </ul>  
-  <h2 id="eligibility">Requirements for submitting an ATIP request </h2>
-  <p>To submit an Access to Information and Privacy (ATIP) request, the necessary documentation will vary based on the type of request and whether you are requesting information for yourself or on behalf of someone else. Please use the drop-down menus provided to select your request type and choose the description that best reflects your situation to learn what you need to provide for the Canada Revenue Agency (CRA) to process your request. 
-</p>  
-<div class="row"><div><div class="wb-tabs ignore-session"><div class="tabpanels"><details id="interactive"><summary>Request personal information under Privacy Act (no cost)</summary><p>A <a href="#text_version">text</a> version is available if needed.</p>
+  <h2 id="eligibility">What information you need to provide </h2>
+  <p>The information you need to provide depends on what type of request you are sending and whether you are requesting information for yourself or on behalf of someone else. 
+</p>   
+<p>Answer a few questions to help you determine what information you’ll need to send with your request.</p>
+<div class="row"><div><div class="wb-tabs ignore-session"><div class="tabpanels"><details id="interactive"><summary>Interactive version</summary><p>A <a href="#text_version">text</a> version is available if needed.</p>
 <section class="alert alert-info"><p>The CRA does <strong>not</strong> collect or retain any of the information you enter on this page</p>
 </section><h3 id="h_1_1">Choose the description that applies to you</h3>
 <p class="text-muted gc-font-2019">Make a selection and <strong>scroll down</strong> for further questions and results.</p>
