--- a/requirements-need-to-make-a-request.html
+++ b/requirements-need-to-make-a-request.html
@@ -162,9 +162,10 @@
 <p>There is no fee for requests for personal information under the Privacy Act.</p>
   <section class="alert alert-info">
   <h3>New process for representatives</h3>
- <p>Effective <strong>September 10, 2024</strong>, the CRA is updating its process. The ATIP Directorate will no longer process your requests for your client’s income statements from the last 3 years, notices of assessment, and benefits information. Your client can get this information through <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">My Account</a>  or <a href="https://www.canada.ca/en/revenue-agency/services/e-services.html">other CRA services</a>. For more information about these changes, go to <a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/changes-access-information-privacy-requests-canada-revenue-agency.html">Changes to access to information and privacy requests at the Canada Revenue Agency</a>.</p>
+ <p>Effective <strong>September 10, 2024</strong>, the CRA is updating its process. The ATIP Directorate will no longer process your requests for your client’s income statements from the last 3 years, notices of assessment, and benefits information. Your client can get this information through <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">My Account</a>  or <a href="https://www.canada.ca/en/revenue-agency/services/e-services.html">other CRA services</a>.  </p>	 
+<p>For more information about these changes, go to <a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/changes-access-information-privacy-requests-canada-revenue-agency.html">Changes to access to information and privacy requests at the Canada Revenue Agency</a>.</p>
 </section>  
-<p>For more information:<a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/changes-access-information-privacy-requests-canada-revenue-agency.html">Changes to access to information and privacy requests at the Canada Revenue Agency.</a> </p>
+
   <h2 class="h3">On this page</h2>
         <ul>
           <li><a href="#eligibility">Who can send a request</a></li>
