--- a/Find-information-is-already-available.html
+++ b/Find-information-is-already-available.html
@@ -146,8 +146,8 @@
 		<nav class="gc-subway provisional">
 			<h1>Access to information and privacy at the Canada Revenue Agency  </h1>
 			<ul>
-				<li><a href="#" class="active">What is Access to information and Privacy (ATIP) </a></li>
-        			<li><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information that is available without an ATIP requset </a></li>
+				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/what%20is%20Access%20to%20information%20and%20privacy%20at%20CRA.html">What is Access to information and Privacy (ATIP) </a></li>
+        			<li><a href="#" class="active">Find information that is available without an ATIP requset </a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/requirements-need-to-make-a-request.html">Get ready to make a request</a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/how-to-submit-an-ATIP-request.html">How to send an ATIP request</a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/ways-to-receive.html">Ways to receive requested records</a></li>
