--- a/Find-information-is-already-available.html
+++ b/Find-information-is-already-available.html
@@ -240,7 +240,7 @@
 		<nav class="gc-subway-pagination">
 			<h2 class="wb-inv">Document navigation</h2>
 			<ul class="pager">
-				<li class="next"><a href="https://cra-proto.github.io/ATIP-request-prototype/requirements-need-to-make-a-request.html" rel="next"><span class="wb-inv">Next: </span>Requirements to make an ATIP request</a></li>
+				<li class="next"><a href="https://cra-proto.github.io/ATIP-request-prototype/requirements-need-to-make-a-request.html" rel="next"><span class="wb-inv">Next: </span>Get ready to make a request</a></li>
 			</ul>
 		</nav>
     <div class="mwsgeneric-base-html parbase section">
