--- a/requirements-need-to-make-a-request.html
+++ b/requirements-need-to-make-a-request.html
@@ -867,7 +867,7 @@ You are unsure</h4>
 		<nav class="gc-subway-pagination">
 			<h2 class="wb-inv">Document navigation</h2>
 			<ul class="pager">
-				<li class="next"><a href="https://cra-proto.github.io/ATIP-request-prototype/how-to-submit-an-ATIP-request.html" rel="next"><span class="wb-inv">Next: </span>Submitting an ATIP request</a></li>
+				<li class="next"><a href="https://cra-proto.github.io/ATIP-request-prototype/how-to-submit-an-ATIP-request.html" rel="next"><span class="wb-inv">Next: </span>Sending an ATIP request</a></li>
 			</ul>
 		</nav>
     <div class="mwsgeneric-base-html parbase section">
