--- a/how-to-submit-an-ATIP-request.html
+++ b/how-to-submit-an-ATIP-request.html
@@ -43,15 +43,15 @@
 		<meta name="dcterms.identifier" content="Canada_Revenue_Agency">
 
       <!--this page contains structured data--> 
-<link rel="stylesheet" href="./How to submit an ATIP request - Canada.ca_files/wet-boew.min.css">
-      <link rel="stylesheet" href="./How to submit an ATIP request - Canada.ca_files/theme.css">
-      <link href="./How to submit an ATIP request - Canada.ca_files/alpha-beta-banner.css" rel="stylesheet">
-      <link rel="stylesheet" href="./How to submit an ATIP request - Canada.ca_files/2023-10-mount-revelstoke.css">
+<link rel="stylesheet" href="./How to send an ATIP request - Canada.ca_files/wet-boew.min.css">
+      <link rel="stylesheet" href="./How to send an ATIP request - Canada.ca_files/theme.css">
+      <link href="./How to send an ATIP request - Canada.ca_files/alpha-beta-banner.css" rel="stylesheet">
+      <link rel="stylesheet" href="./How to send an ATIP request - Canada.ca_files/2023-10-mount-revelstoke.css">
 
 <noscript>
          <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/wet-boew/css/noscript.min.css">
       </noscript>
-<link rel="stylesheet" href="./How to submit an ATIP request - Canada.ca_files/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+<link rel="stylesheet" href="./How to send an ATIP request - Canada.ca_files/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 <!-- <meta name="description" content="" >  -->
 
       <link rel="apple-touch-icon" sizes="57x57 72x72 114x114 144x144 150x150" class="wb-favicon" href="https://www.canada.ca/etc/designs/canada/wet-boew/assets/favicon-mobile.png"><link href="https://www.canada.ca/etc/designs/canada/wet-boew/assets/favicon.ico" rel="icon" type="image/x-icon" class="wb-init wb-favicon-inited">
