--- a/how-to-submit-an-ATIP-request.html
+++ b/how-to-submit-an-ATIP-request.html
@@ -4,7 +4,7 @@
    <head>
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta charset="utf-8">
-      <title>How to submit an ATIP request - Canada.ca</title>
+      <title>How to send an ATIP request - Canada.ca</title>
       <meta content="width=device-width,initial-scale=1" name="viewport"/>
       
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
@@ -156,22 +156,38 @@
 	    </nav>
 
 		<!-- Second H1 -->
-		<h1 property="name" id="wb-cont" class="gc-thickline">How to submit an ATIP request</h1> 
-	<p>Once you have gathered all the required information, you can submit your access to information and privacy (ATIP) requests through two methods: </p> 
-<h2 class="h3">ATIP Online Request Service (AORS) </h2> 
-<p>To use online method, you must first <a href="https://www.canada.ca/en/treasury-board-secretariat/services/access-information-privacy/access-information/request-information/create-secure-atip-online-account.html">create a secure ATIP Online account</a>. AORS allows you quickly and securely submit your requests and receive your records. This will give you access to free features, including the ability to:  </p> 
-<ul> 
-	<li>Receive a copy of your records electronicallyli</li> 
-	<li>Access the status of your requests</li> 
-	<li>Communicate directly with the Access to Information and Privacy Directoratets</li> 
-</ul> 
-<p>After creating an AORS account, You must send access to information and privacy (ATIP) requests to the Canada Revenue Agency (CRA) through the new <a href="https://www.canada.ca/en/treasury-board-secretariat/services/access-information-privacy/access-information/request-information.html">ATIP Online Request Service (AORS).</a> </p>
-<h2 class="h3">By mail </h2> 
-<p>Send everything listed under <a href="https://cra-proto.github.io/ATIP-request-prototype/requirements-need-to-make-a-request.html">What you will need to make a request</a>  in your letter or Completed <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc378.html">Form RC378, Access to Information and Personal Information Request Form</a> to the following address:</p> 
-<p>Director General, ATIP Directorate<br>
-Canada Revenue Agency<br>
-555 MacKenzie Avenue, 5th Floor<br>
-Ottawa ON&nbsp; K1A 0L5&nbsp;</p>
+		<h1 property="name" id="wb-cont" class="gc-thickline">How to send an ATIP request</h1> 
+	<h2>ATIP Online</h2>
+		<p>This account allows you to send ATIP requests to any government institution that is subject to the Access to Information Act or the Privacy Act, including the CRA.</p>
+		<p>When you create an account, you can:</p>
+		<ul> 
+			<li>Receive a copy of your records electronically</li> 
+			<li>Access the status of your requests</li> 
+			<li>Communicate directly with the Access to Information and Privacy Directorate</li> 
+		</ul>
+
+		<ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
+			<li class="cnjnctn-col">
+				<h3 class="h4 mrgn-tp-sm text-muted">I have an ATIP online account<span class="wb-inv">: Option 1</span></h3>
+				<p class="mrgn-bttm-lg"><a class="btn btn-primary btn-lg btn-block p-sm-3" href="https://www.canada.ca/en/treasury-board-secretariat/services/access-information-privacy/access-information/request-information/make-request.html"<span class="h4">Send an ATIP request</a></span></p>
+			</li>
+			<li class="cnjnctn-col">
+				<h3 class="h4 mrgn-tp-sm text-muted">I want to create an account<span class="wb-inv">: Option 2</span></h3>
+				<p><a href="https://www.canada.ca/en/treasury-board-secretariat/services/access-information-privacy/access-information/request-information/create-secure-atip-online-account.html" class="btn btn-default btn-lg btn-block p-sm-3"><span class="h4"><span class="fa-lg mrgn-rght-sm fa-pull-left"></span>Create an ATIP online account</span></a></p>
+			</li>
+		</ul>
+		
+		<h2>By mail</h2>
+		<ol class="lst-stps ld-zr mrgn-tp-lg">
+			<li>Complete <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc378.html">Form RC378, Access to Information and Personal Information Request</a>, or write a letter that contains all of the necessary information about your request</li>
+			<li>Mail your completed form to:
+				<p>Director General, ATIP Directorate<br>
+					Canada Revenue Agency<br>
+					555 MacKenzie Avenue, 5th Floor<br>
+					Ottawa ON&nbsp; K1A 0L5&nbsp;
+				</p>
+			</li>
+		</ol>
 
 <!-- Pagination -->
 		<nav class="gc-subway-pagination">
