--- a/how-to-submit-an-ATIP-request.html
+++ b/how-to-submit-an-ATIP-request.html
@@ -157,8 +157,8 @@
 
 		<!-- Second H1 -->
 		<h1 property="name" id="wb-cont" class="gc-thickline">How to send an ATIP request</h1> 
-	<h2>ATIP Online</h2>
-		<p>This account allows you to send ATIP requests to any government institution that is subject to the Access to Information Act or the Privacy Act, including the CRA.</p>
+	<h2>Online</h2>
+		<p>An ATIP online account allows you to send ATIP requests to any government institution that is subject to the Access to Information Act or the Privacy Act, including the CRA.</p>
 		<p>When you create an account, you can:</p>
 		<ul> 
 			<li>Receive a copy of your records electronically</li> 
