--- a/ways-to-receive.html
+++ b/ways-to-receive.html
@@ -157,33 +157,29 @@
 
 		<!-- Second H1 -->
 		<h1 property="name" id="wb-cont" class="gc-thickline">Ways to receive requested records </h1> 
-	<h2>Electronically</h2> 
-  <p>To receive your response package electronically:</p> 
-  <ul> 
-    <li>Create an ATIP Online Request Service (AORS) account when you fill out your request </li>  
-    <li>Select “Electronic – to your ATIP online account” as your preferred method to get your records.</li>
-  </ul> 
-  <p>If you choose to continue as an AORS guest, you will have to create a <a href="https://www.canadapost-postescanada.ca/cpc/doc/en/postal-services/connect-participant-guide.pdf">Connect account</a> to receive records for your ATIP request. The CRA uses Canada Post’s secure online platform Connect to send records that you cannot receive through the AORS. This service is safe and free.</p> 
-
-<h2>By paper</h2> 
-<p>The requested records will be mailed using <a href="https://www.canadapost-postescanada.ca/cpc/en/small-business/ship-in-canada/compare-services/xpresspost.page">Xpresspost™</a> to the mailing address provided. <a href="https://www.canadapost-postescanada.ca/cpc/en/small-business/ship-in-canada/compare-services/xpresspost.page">Xpresspost™</a> tracks packages and has a 2 day delivery guarantee. If delivery of the records is unsuccessful, an ATIP analyst may contact you to verify your address.</p>
-<section class="alert alert-warning">
+	<h2>Online</h2>
+		<p>If you sent your request through your ATIP online account, you have the option to receive our response online.</p>
+		<p>In your ATIP online account, select "Electronic - to your ATIP online account" as your preferred method to get your records.</p>
+		<p>If you choose to continue as an ATIP online guest, you will have to create a <a href="https://www.canadapost-postescanada.ca/cpc/doc/en/postal-services/connect-participant-guide.pdf">Connect account</a> to receive records for your ATIP request.</p>
+		<p>The CRA uses Canada Post’s secure online platform Connect to send records that you cannot receive through the ATIP online account. This service is safe and free.</p>
+		<h2>By mail</h2>
+		<p>The requested records will be mailed using <a href="https://www.canadapost-postescanada.ca/cpc/en/small-business/ship-in-canada/compare-services/xpresspost.page">Xpresspost™</a> to the mailing address provided. Xpresspost™ tracks packages and has a 2 day delivery guarantee.</p>
+		<p>If delivery of the records is unsuccessful, an ATIP analyst may contact you to verify your address.</p>
+		
+		
+		<!--<section class="alert alert-warning">
 	<h4>Possible delays in processing paper requests</h4>
 	<p>As a measure put in place to curb the spread of COVID-19 and protect the health and safety of Canadians, there are a limited number of ATIP employees accessing the office. This is likely to result in delays processing your paper records.</p>
-</section>
+</section>-->
 
-  <div class="mwsbodytext text parbase section">
-    
 
     
         <h2>In person</h2>
 <p>An ATIP analyst will contact you using the contact information provided. The analyst will arrange a scheduled time for you to view the records at your nearest Tax Service Office or Tax Center.</p>
 
-</div>
-<div class="mwsalerts section">
 
 <section class="alert alert-warning">
-	<h4>Option temporarily suspended </h4>
+	<p class="h3 mrgn-tp-0">Option temporarily suspended</p>
 	<p>Due to measures put in place to curb the spread of COVID-19 and protect the health and safety of Canadians, the option to examine the requested records in person at a CRA office has been temporarily suspended.</p>
 </section>
 
