Fix typo contact-us.html

--- a/contact-us.html
+++ b/contact-us.html
@@ -150,7 +150,7 @@
         			<li><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information is already available </a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/requirements-need-to-make-a-request.html">What you will need to make a request</a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/how-to-submit-an-ATIP-reques.html">How to submit an ATIP request</a></li>
-				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/ways-to-receive.html">Ways to receive requested recordsn</a></li>
+				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/ways-to-receive.html">Ways to receive requested records</a></li>
 				<li><a href="#" class="active">Contact us</a></li>
 			</ul>
 	    </nav>
