Remove link requirements-need-to-make-a-request.html

--- a/requirements-need-to-make-a-request.html
+++ b/requirements-need-to-make-a-request.html
@@ -157,7 +157,7 @@
 
 		<!-- Second H1 -->
 		<h1 property="name" id="wb-cont" class="gc-thickline">Get ready to make a request </h1> 
-	<p>If you can’t find <a href=" https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">the information you are looking for </a> , you can make a formal ATIP request. This process may take <b>at least 30 days</b>.</p>   
+	<p>If you can’t find the information you are looking for, you can make a formal ATIP request. This process may take <b>at least 30 days</b>.</p>   
 <p>There is a $5 fee for requests under the Access to Information Act.</p> 
 <p>There is no fee for requests for personal information under the Privacy Act.</p>  
 
