--- a/requirements-need-to-make-a-request.html
+++ b/requirements-need-to-make-a-request.html
@@ -174,7 +174,7 @@
 	<li>a Canadian citizen</li>  
 	<li>a permanent resident of Canada</li> 
 	<li>an individual or corporation currently in Canada</li>  
-	<li>individuals outside of Canada (under the Privacy Act <strong>only</strong>) </li>
+	<li>individuals outside of Canada (privacy requests <strong>only</strong>) </li>
 </ul>  
 <section class="alert alert-info">
 	<h3>New process for representatives</h3>
