--- a/how-to-submit-an-ATIP-request.html
+++ b/how-to-submit-an-ATIP-request.html
@@ -179,7 +179,15 @@
 		
 		<h2>By mail</h2>
 		<ol class="lst-stps ld-zr mrgn-tp-lg">
-			<li>Complete <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc378.html">Form RC378, Access to Information and Personal Information Request</a>, or write a letter that contains all of the necessary information about your request</li>
+			<li>
+				<ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
+					<li class="cnjnctn-col">
+						<p>Complete <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc378.html">Form RC378, Access to Information and Personal Information Request</a></p>
+					</li>
+					<li class="cnjnctn-col">
+						<p>Write a letter that contains all of the necessary information about your request</p>
+					</li>
+				</ul>
 			<li>Mail your completed form to:
 				<p>Director General, ATIP Directorate<br>
 					Canada Revenue Agency<br>
