Update breadcrumb link how-to-submit-an-ATIP-request.html

--- a/how-to-submit-an-ATIP-request.html
+++ b/how-to-submit-an-ATIP-request.html
@@ -132,7 +132,7 @@
       <li><a href="https://www.canada.ca/en.html">Canada.ca</a></li>
       <li><a href="https://www.canada.ca/en/services/taxes.html">Canada Revenue Agency</a></li>
       <li><a href="https://www.canada.ca/en/services/taxes/income-tax.html">Transparency</a></li>
-      <li><a href="https://www.canada.ca/en/services/taxes/income-tax/corporation-income-tax.html">Access to information and privacy</a></li>
+      <li><a href="https://cra-proto.github.io/ATIP-request-prototype/">Access to information and privacy</a></li>
     </ol>
   </div>
 </nav>
