--- a/requirements-need-to-make-a-request.html
+++ b/requirements-need-to-make-a-request.html
@@ -179,15 +179,15 @@
 <section class="alert alert-info">
 	<h3>New process for representatives</h3>
  	<p>We have made changes to the ATIP process that affect representatives who are requesting information on a client's behalf.</p>	 
-	<p><a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/changes-access-information-privacy-requests-canada-revenue-agency.html">Changes to access to information and privacy requests</a>.</p>
+	<p><a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/changes-access-information-privacy-requests-canada-revenue-agency.html">Changes to access to information and privacy requests</a></p>
 </section>
 <h2 id="eligibility">What information you need to provide</h2>
 <p>The information you need to provide depends on what type of request you are sending and whether you are requesting information for yourself or on behalf of someone else. 
 </p>   
 <p>Answer a few questions to help you determine what information you’ll need to send with your request.</p>
 <div class="row"><div><div class="wb-tabs ignore-session"><div class="tabpanels"><details id="interactive"><summary>Interactive version</summary><p>A <a href="#text_version">text</a> version is available if needed.</p>
-<section class="alert alert-info"><p>The CRA does <strong>not</strong> collect or retain any of the information you enter on this page</p>
-</section><h3 id="h_1_1">Choose the description that applies to you</h3>
+<p>The CRA does <strong>not</strong> collect or retain any of the information you enter on this page.</p>
+<h3 id="h_1_1">Choose the description that applies to you</h3>
 <p class="text-muted gc-font-2019">Make a selection and <strong>scroll down</strong> for further questions and results.</p>
 <div class="wb-frmvld"><form method="get">
 <div class="wb-fieldflow" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noForm&quot;: true, &quot;base&quot;: { &quot;live&quot;: true }, &quot;isoptional&quot;: true, &quot;noreqlabel&quot;: true}"><p>Who is requesting the information ? </p>
