--- a/ways-to-receive.html
+++ b/ways-to-receive.html
@@ -161,7 +161,7 @@
 		<p>If you sent your request through your ATIP online account, you have the option to receive our response online.</p>
 		<p>In your ATIP online account, select "Electronic - to your ATIP online account" as your preferred method to get your records.</p>
 		<p>If you choose to continue as an ATIP online guest, you will have to create a <a href="https://www.canadapost-postescanada.ca/cpc/doc/en/postal-services/connect-participant-guide.pdf">Connect account</a> to receive records for your ATIP request.</p>
-		<p>The CRA uses Canada Post’s secure online platform Connect to send records that you cannot receive through the ATIP online account. This service is safe and free.</p>
+		<p>The CRA uses Canada Post’s secure online platform Connect to send records that you cannot receive through the ATIP online account.</p>
 		<h2>By mail</h2>
 		<p>The requested records will be mailed using <a href="https://www.canadapost-postescanada.ca/cpc/en/small-business/ship-in-canada/compare-services/xpresspost.page">Xpresspost™</a> to the mailing address provided. Xpresspost™ tracks packages and has a 2 day delivery guarantee.</p>
 		<p>If delivery of the records is unsuccessful, an ATIP analyst may contact you to verify your address.</p>
