--- a/ways-to-receive.html
+++ b/ways-to-receive.html
@@ -156,7 +156,37 @@
 	    </nav>
 
 		<!-- Second H1 -->
-		<h1 property="name" id="wb-cont" class="gc-thickline">Ways to receive requested records </h1> 
+		<h1 property="name" id="wb-cont" class="gc-thickline">Ways to receive requested records </h1>  
+<dl class="dl-horizontal">
+        <dt id="online">Online</dt>
+        <dd>
+          <p>If you sent your request through your ATIP online account, you have the option to receive our response online.</p>
+          <p>In your ATIP online account, select "Electronic - to your ATIP online account" as your preferred method to get your records.</p>       
+	  <p>If you choose to continue as an ATIP online guest, you will have to create a Connect account to receive records for your ATIP request.</p>    
+	  <p>The CRA uses Canada Post’s secure online platform Connect to send records that you cannot receive through the ATIP online account. </p> 
+        </dd>
+    
+        <dt id="bymail">By mail</dt>
+        <dd>
+        <p>The requested records will be mailed using <a href="https://www.canadapost-postescanada.ca/cpc/en/small-business/ship-in-canada/compare-services/xpresspost.page">Xpresspost™</a>to the mailing address provided. 
+Xpresspost™ tracks packages and has a 2 day delivery guarantee. 
+</p> 
+	<p>If delivery of the records is unsuccessful, an ATIP analyst may contact you to verify your address.</p> 
+	<section class="alert alert-warning">
+<p class="h3 mrgn-tp-0">Possible delays in processing paper requests</p>
+<p>As a measure put in place to curb the spread of COVID-19 and protect the health and safety of Canadians, there are a limited number of ATIP employees accessing the office. This is likely to result in delays processing your paper records. </p>  
+</section>
+	</dd> 
+	    <dt id="bymail">In person</dt>
+        <dd>
+        <p>An ATIP analyst will contact you using the contact information provided. The analyst will arrange a scheduled time for you to view the records at your nearest Tax Service Office or Tax Center. </p> 
+	<p>If delivery of the records is unsuccessful, an ATIP analyst may contact you to verify your address.</p> 
+	<section class="alert alert-warning">
+<p class="h3 mrgn-tp-0">Option temporarily suspended </p>
+<p>Due to measures put in place to curb the spread of COVID-19 and protect the health and safety of Canadians, the option to examine the requested records in person at a CRA office has been temporarily suspended.   </p>  
+</section>
+	</dd> 
+</dl>
 	<h2>Online</h2>
 		<p>If you sent your request through your ATIP online account, you have the option to receive our response online.</p>
 		<p>In your ATIP online account, select "Electronic - to your ATIP online account" as your preferred method to get your records.</p>
