--- a/ways-to-receive.html
+++ b/ways-to-receive.html
@@ -194,7 +194,7 @@ Xpresspost™ tracks packages and has a 2 day delivery guarantee.
 		<p>The CRA uses Canada Post’s secure online platform Connect to send records that you cannot receive through the ATIP online account.</p>
 		<h2>By mail</h2>
 		<p>The requested records will be mailed using <a href="https://www.canadapost-postescanada.ca/cpc/en/small-business/ship-in-canada/compare-services/xpresspost.page">Xpresspost™</a> to the mailing address provided. Xpresspost™ tracks packages and has a 2 day delivery guarantee.</p>
-		<p>If delivery of the records is unsuccessful, an ATIP analyst may contact you to verify your address.</p> -->
+		<p>If delivery of the records is unsuccessful, an ATIP analyst may contact you to verify your address.</p> 
 		
 		
 		<!--<section class="alert alert-warning">
@@ -213,7 +213,7 @@ Xpresspost™ tracks packages and has a 2 day delivery guarantee.
 	<p>Due to measures put in place to curb the spread of COVID-19 and protect the health and safety of Canadians, the option to examine the requested records in person at a CRA office has been temporarily suspended.</p>
 </section>
 
-</div>
+</div> -->
 
 
 	<!-- Pagination -->
