--- a/ways-to-receive.html
+++ b/ways-to-receive.html
@@ -200,7 +200,7 @@ Xpresspost™ tracks packages and has a 2 day delivery guarantee.
 		<!--<section class="alert alert-warning">
 	<h4>Possible delays in processing paper requests</h4>
 	<p>As a measure put in place to curb the spread of COVID-19 and protect the health and safety of Canadians, there are a limited number of ATIP employees accessing the office. This is likely to result in delays processing your paper records.</p>
-</section>-->
+</section>
 
 
     
@@ -211,9 +211,9 @@ Xpresspost™ tracks packages and has a 2 day delivery guarantee.
 <section class="alert alert-warning">
 	<p class="h3 mrgn-tp-0">Option temporarily suspended</p>
 	<p>Due to measures put in place to curb the spread of COVID-19 and protect the health and safety of Canadians, the option to examine the requested records in person at a CRA office has been temporarily suspended.</p>
-</section>
+</section>-->
 
-</div> -->
+</div> 
 
 
 	<!-- Pagination -->
