--- a/contact-us.html
+++ b/contact-us.html
@@ -156,8 +156,30 @@
 	    </nav>
 
 		<!-- Second H1 -->
-		<h1 property="name" id="wb-cont" class="gc-thickline">Contact us</h1> 
- <h3>By phone</h3> 
+		<h1 property="name" id="wb-cont" class="gc-thickline">Contact us</h1>  
+
+	<dl class="dl-horizontal">
+        <dt id="online">By phone</dt>
+        <dd>
+          <ul> 
+	  <li>613-960-5393 (Ottawa area)</li>  
+	  <li>1-866-333-5402 (toll free)</li>
+	  </ul>
+        </dd>
+    
+        <dt id="bymail">By email</dt> 
+		<dd> 
+		<p>For <strong>general enquiries</strong> only:<a href="mailto:ATIP-AIPRP@cra-arc.gc.ca">ATIP-AIPRP@cra-arc.gc.ca</a></p>  
+	         <p>Our ATIP general mailbox representatives can provide you with:</p> 
+		<ul> 
+		<li>General information about how to send an ATIP request</li>  
+		<li>Updates about whether your request has been received</li> 
+		</ul> 
+		<p>To protect your privacy, do not send personal or sensitive details by email.</p>
+		 
+		</dd> 
+	</dl>
+<!-- <h3>By phone</h3> 
  
  <!--<div class="row">
  <div class="col-md-8 mrgn-lft-0">
@@ -184,7 +206,7 @@
 	<li>General information about how to send an ATIP request</li>
 	<li>Updates about whether your request has been received</li>
   </ul>
-  <p>To protect your privacy, do not send personal or sensitive details by email.</p>
+  <p>To protect your privacy, do not send personal or sensitive details by email.</p> -->
 
 
 	<!-- Pagination -->
