--- a/contact-us.html
+++ b/contact-us.html
@@ -175,40 +175,12 @@
 		<li>General information about how to send an ATIP request</li>  
 		<li>Updates about whether your request has been received</li> 
 		</ul> 
-		<p>To protect your privacy, do not send personal or sensitive details by email.</p>
+		<p>To protect your privacy, <strong>do not</strong> send personal or sensitive details by email.</p>
 		 
 		</dd> 
 	</dl>
-<!-- <h3>By phone</h3> 
- 
- <!--<div class="row">
- <div class="col-md-8 mrgn-lft-0">
- <dl class="dl-horizontal dt-max mrgn-bttm-sm">
-  <dt class="h3 mrgn-tp-0">Ottawa area:</dt>
-  <dd>613-960-5393</dd>
-  <dt class="h3 mrgn-tp-0 mrgn-bttm-0">Toll free:</dt>
-  <dd>1-866-333-5402</dd>
- </dl>
- </div>
- </div>-->
- 
-  <ul> 
-    <li>613-960-5393 (Ottawa area)</li> 
-    <li>1-866-333-5402 (toll free)</li>
-  </ul>
 
  
-																		
-  <h3>By email</h3>
-  <p>For <strong>general enquiries</strong> only: <a href="mailto:ATIP-AIPRP@cra-arc.gc.ca">ATIP-AIPRP@cra-arc.gc.ca</a></p>
-  <p>Our ATIP general mailbox representatives can provide you with: </p> 
-  <ul>
-	<li>General information about how to send an ATIP request</li>
-	<li>Updates about whether your request has been received</li>
-  </ul>
-  <p>To protect your privacy, do not send personal or sensitive details by email.</p> -->
-
-
 	<!-- Pagination -->
 	<nav role="navigation">
   <h2 class="wb-inv">Document navigation</h2>
