--- a/requirements-need-to-make-a-request.html
+++ b/requirements-need-to-make-a-request.html
@@ -159,7 +159,18 @@
 		<h1 property="name" id="wb-cont" class="gc-thickline">Get ready to make a request </h1> 
 	<p>If you can’t find the information you are looking for, you can make a formal ATIP request. This process may take <b>at least 30 days</b>.</p>   
 <p>There is a $5 fee for requests under the Access to Information Act.</p> 
-<p>There is no fee for requests for personal information under the Privacy Act.</p>  
+<p>There is no fee for requests for personal information under the Privacy Act.</p>   
+	<section class="alert alert-info">
+	<h3>A new approach for handling certain personal tax information and benefits requests from representatives </h3>
+ 	<p>Effective September 10, 2024, the CRA is updating its process. The ATIP Directorate will no longer process your requests for your client’s:  
+	<ul> 
+	 	<li>Income statements from the last 3 years  </li> 
+		<li>Notices of assessment</li>  
+		<li>Benefits information </li> 
+	</ul> </p>	 
+	<p>Your client can get this information through My Account or other CRA services. </p> 
+	<p>For more information:<a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/changes-access-information-privacy-requests-canada-revenue-agency.html">Changes to access to information and privacy requests</a></p>
+</section>
 
   <h2 class="h3">On this page</h2>
         <ul>
@@ -176,11 +187,7 @@
 	<li>an individual or corporation currently in Canada</li>  
 	<li>individuals outside of Canada (privacy requests <strong>only</strong>) </li>
 </ul>  
-<section class="alert alert-info">
-	<h3>New process for representatives</h3>
- 	<p>We have made changes to the ATIP process that affect representatives who are requesting information on a client's behalf.</p>	 
-	<p><a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/changes-access-information-privacy-requests-canada-revenue-agency.html">Changes to access to information and privacy requests</a></p>
-</section>
+
 <h2 id="eligibility">What information you need to provide</h2>
 <p>The information you need to provide depends on what type of request you are sending and whether you are requesting information for yourself or on behalf of someone else. 
 </p>   
