--- a/Find-information-is-already-available.html
+++ b/Find-information-is-already-available.html
@@ -157,15 +157,20 @@
 
 		<!-- Second H1 -->
 		<h1 property="name" id="wb-cont" class="gc-thickline">Find information that is available without an ATIP request</h1> 
-	<section class="alert alert-info">
+	<!--<section class="alert alert-info">
 	<h3>CRA does not have: </h3>
 	<ul> 
 	 	<li>Information about administering social insurance numbers (applications, replacements for lost or stolen cards, or forgotten numbers) or employment insurance. Go to <a href="https://www.canada.ca/en/employment-social-development/corporate/portfolio/service-canada.html"> Serive Canada.</a></li> 
 		<li>Information about your travel history outside Canada. Go to <a href="https://www.cbsa-asfc.gc.ca/agency-agence/reports-rapports/pia-efvp/atip-aiprp/thr-rav-eng.html"> Canada Border Services Agency.</a></li>  
 	</ul> </p>	 
-</section>
-	<p>You can get many types of information from the CRA without sending a formal information request.</p> 
- <p>This is often the <b>fastest way</b> to get the information you need.</p>
+</section> -->
+	<p>You can get many types of information from the CRA without sending a formal information request.This is often the <b>fastest way</b> to get the information you need.</p>  
+	<p>The following information that CRA does not have:</p> 
+	<ul> 
+	<li><span class="fas fa-times text-danger fa-li"></span>Information about administering social insurance numbers (applications, replacements for lost or stolen cards, or forgotten numbers) or employment insurance. Please go to <a href="https://www.canada.ca/en/employment-social-development/corporate/portfolio/service-canada.html"> Serive Canada.</a> </li> 
+	<li><span class="fas fa-times text-danger fa-li"></span>Information about your travel history outside Canada.. Please go to <a href="https://www.cbsa-asfc.gc.ca/agency-agence/reports-rapports/pia-efvp/atip-aiprp/thr-rav-eng.html"> Canada Border Services Agency.</a> </li> 	
+</ul>
+	
 
 <h2 class="h3">On this page</h2>
         <ul>
